--- a/modul7_kelompok_1/modul7_kelompok_1/modul7_kelompok_1.csproj
+++ b/modul7_kelompok_1/modul7_kelompok_1/modul7_kelompok_1.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="jurnal7_1_2311104067.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="jurnal7_1_2311104067.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
